--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
+    "http-auth": "^3.2.3",
     "mongoose": "^5.6.3",
     "pug": "^2.0.4"
   },
